--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ section{
     flex-direction: column;
 }
 section h1{
-    color: brown;
+   color: rgb(27, 87, 95);;
     font-size: 15vh;
     text-shadow: 7px 3px 10px rgb(231, 226, 226);
 }
